--- a/tools-setup/roles/vault/tasks/main.yml
+++ b/tools-setup/roles/vault/tasks/main.yml
@@ -9,7 +9,7 @@
     state: installed
 
 - name: Copy vault config
-  ansible.builtin.file:
+  ansible.builtin.copy:
     src: vault.hcl
     dest: /etc/vault.d/vault.hcl
 
