--- a/tools-setup/Makefile
+++ b/tools-setup/Makefile
@@ -5,5 +5,5 @@ infra:
 
 ansible:
 	git pull
-	ansible-playbook -i ${tool_name}-int.omshiva.shop, -e ansible_user=azuser -e ansible_password=Dev@12345678 tool_setup.yml -e tool_name=${tool_name} -e token=$(token)
+	ansible-playbook -i ${tool_name}-int.omshiva.shop, -e ansible_user=azuser -e ansible_password=Dev@12345678 tool_setup.yml -e tool_name=${tool_name}
 
